--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,13 @@
     <artifactId>Web-Demo</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>hello-web Maven Webapp</name>
+    <name>Web-Demo</name>
     <url>http://maven.apache.org</url>
+
+    <properties>
+        <spring.version>3.1.4.RELEASE</spring.version>
+    </properties>
+
     <!-- 引入依赖的第三方库 -->
     <dependencies>
         <dependency>
@@ -18,7 +23,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.1.7.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -29,6 +34,16 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+            <version>2.0</version>
         </dependency>
     </dependencies>
     <build>
