修改maven目录结构，此版本不能运行

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <url>http://maven.apache.org</url>
 
     <modules>
-        <module>demo-web</module>
+        <module>web-demo-web</module>
     </modules>
 
     <!-- 引入依赖的第三方库 -->
