--- a/web-demo-web/pom.xml
+++ b/web-demo-web/pom.xml
@@ -2,18 +2,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.knight</groupId>
-    <artifactId>demo-web</artifactId>
+    <artifactId>web-demo-web</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Web-Demo-Web</name>
     <url>http://maven.apache.org</url>
-
-    <parent>
-        <groupId>org.knight</groupId>
-        <artifactId>Web-Demo</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
 
     <properties>
         <spring.version>3.1.4.RELEASE</spring.version>
@@ -54,6 +47,6 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>web-demo-web</finalName>
     </build>
 </project>
