--- a/webdemo-web/pom.xml
+++ b/webdemo-web/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.knight</groupId>
-    <artifactId>web-demo-web</artifactId>
+    <artifactId>webdemo-web</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Web-Demo-Web</name>
+    <name>WebDemo-Web</name>
     <url>http://maven.apache.org</url>
 
     <properties>
