--- a/webdemo-common/pom.xml
+++ b/webdemo-common/pom.xml
@@ -7,5 +7,11 @@
     <version>1.0-SNAPSHOT</version>
     <name>WebDemo-common</name>
 
+    <parent>
+        <groupId>org.knight</groupId>
+        <artifactId>WebDemo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
 
 </project>
