--- a/webdemo-web/pom.xml
+++ b/webdemo-web/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>velocity-tools</artifactId>
             <version>2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.knight</groupId>
+            <artifactId>webdemo-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>web-demo-web</finalName>
