--- a/webdemo-web/pom.xml
+++ b/webdemo-web/pom.xml
@@ -12,8 +12,17 @@
         <spring.version>3.1.4.RELEASE</spring.version>
     </properties>
 
-    <!-- 引入依赖的第三方库 -->
     <dependencies>
+
+        <!--引入Web-Demo的依赖-->
+        <dependency>
+            <groupId>org.knight</groupId>
+            <artifactId>webdemo-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- 引入依赖的第三方库 -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -65,6 +74,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.1.5.RELEASE</version>
         </dependency>
 
     </dependencies>
