--- a/webdemo-web/pom.xml
+++ b/webdemo-web/pom.xml
@@ -78,8 +78,15 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>4.1.5.RELEASE</version>
+            <version>3.1.4.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>3.1.4.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
     <build>
