--- a/webdemo-web/src/main/webapp/WEB-INF/web.xml
+++ b/webdemo-web/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,14 @@
     </servlet-mapping>
 
     <display-name>Archetype Created Web Application</display-name>
+
+    <error-page>
+        <error-code>401</error-code>
+        <!--<location>/login/login_page</location>-->
+        <location>/static/html/login/login.html</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/static/html/error/5xx.html</location>
+    </error-page>
 </web-app>
