--- a/webdemo-web/pom.xml
+++ b/webdemo-web/pom.xml
@@ -99,6 +99,12 @@
             <version>2.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.knight</groupId>
+            <artifactId>webdemo-search</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
