--- a/webdemo-web/pom.xml
+++ b/webdemo-web/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>webdemo-cache</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.knight</groupId>
+            <artifactId>webdemo-search</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- 引入依赖的第三方库 -->
         <dependency>
@@ -99,11 +105,11 @@
             <version>2.5</version>
             <scope>test</scope>
         </dependency>
+        <!-- swaggerui，这个不是必须的 -->
         <dependency>
-            <groupId>org.knight</groupId>
-            <artifactId>webdemo-search</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.6</version>
         </dependency>
 
 
